--- a/notebooks/mj/Data-Exploration.ipynb
+++ b/notebooks/mj/Data-Exploration.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Provided Data Exploration\n",
-    "### Adapted from https://github.com/cs109-students/michaeljohns-2015hw/blob/hw5/hw5part1.ipynb"
+    "#Data Exploration\n",
+    "### Adapted concepts from [HW1](https://github.com/cs109-students/michaeljohns-2015hw/blob/hw1/hw1.ipynb) and [HW5 Part1](https://github.com/cs109-students/michaeljohns-2015hw/blob/hw5/hw5part1.ipynb)"
    ]
   },
   {
