updated links in master notebook, there are some quirks on GitHub handling

--- a/notebooks/master.ipynb
+++ b/notebooks/master.ipynb
@@ -13,14 +13,16 @@
    "source": [
     "##Part-1 Data Conditioning\n",
     "\n",
-    "**Data conditioning process captured under [Notebook: Data-Exploration](notebooks/mj/Data-Exploration.ipynb)**\n",
+    "**Data conditioning process captured under [Notebook: Data-Exploration](mj/Data-Exploration.ipynb)**\n",
+    "\n",
+    "All referenced artifacts for this section are within [data](../data) folder. Given some GitHub quirks handling relative urls, it may be easier to navigate the hierarchy directly after reading this summary.\n",
     "\n",
     "### Provided Data\n",
     "\n",
     "We were able to locate data from **TODO**:\n",
     "\n",
-    "* [lyrics from 1970 - 2014](data/provided/all%20billboard%20top%20100%20songs%20from%201970-2014.xlsx)\n",
-    "* [key artist popular music](data/provided/Individual%20Artists%20Data.xlsx)\n",
+    "* [lyrics from 1970 - 2014](../data/provided/all%20billboard%20top%20100%20songs%20from%201970-2014.xlsx)\n",
+    "* [key artist popular music](../data/provided/Individual%20Artists%20Data.xlsx)\n",
     "\n",
     "### Harvested Data\n",
     "\n",
@@ -28,11 +30,15 @@
     "\n",
     "### NLP Conditioning \n",
     "\n",
-    "* N-Gram - [noun n-gram](data/conditioned/noun-n-gram.json) and [adjective n-gram](data/conditioned/adj-n-gram.json)\n",
-    "* Vocabs - [noun vocab](data/conditioned/nounvocab.json) [adjective vocab](data/conditioned/adjvocab.json)\n",
-    "* Id2Word - [noun id2word](data/conditioned/nounid2word.json) [adjective id2word](data/conditioned/adjid2word.json)\n",
-    "* Corpus - [noun docs](data/conditioned/corpus.p)\n",
-    "\n"
+    "* N-Gram - [noun n-gram](../data/conditioned/noun-n-gram.json) and [adjective n-gram](../data/conditioned/adj-n-gram.json)\n",
+    "* Vocabs - [noun vocab](../data/conditioned/nounvocab.json) [adjective vocab](../data/conditioned/adjvocab.json)\n",
+    "* Id2Word - [noun id2word](../data/conditioned/nounid2word.json) [adjective id2word](../data/conditioned/adjid2word.json)\n",
+    "* Corpus - [noun docs](../data/conditioned/corpus.p)\n",
+    "\n",
+    "### Other Manipuation\n",
+    "\n",
+    "* Decades - [decade dict](../data/conditioned/decade-dict.json)\n",
+    "* Post-Processing - [lyrics df](../data/conditioned/lyrics_pd_df.csv)"
    ]
   }
  ],
