added initial synonym infrastructure, updated Vagrantfile used in data exploration

--- a/notebooks/mj/Data-Exploration.ipynb
+++ b/notebooks/mj/Data-Exploration.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "#Data Exploration\n",
-    "### Adapted concepts from [HW1](https://github.com/cs109-students/michaeljohns-2015hw/blob/hw1/hw1.ipynb) and [HW5 Part1](https://github.com/cs109-students/michaeljohns-2015hw/blob/hw5/hw5part1.ipynb)"
+    "### Adapted concepts from [HW1](https://github.com/cs109-students/michaeljohns-2015hw/blob/hw1/hw1.ipynb) and [HW5 Part1](https://github.com/cs109-students/michaeljohns-2015hw/blob/hw5/hw5part1.ipynb)\n",
+    "\n",
+    "**This notebook should be locally run by issuing `vagrant up` from project root, then locating the notebook at \"http:\\\\localhost:4545\". You may also need to issue `vagrant provision` to update any required resources.**\n"
    ]
   },
   {
@@ -393,71 +395,71 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1001</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Another_Brick_in...</td>\n",
-       "      <td>Another Brick in the Wall, Part II</td>\n",
-       "      <td>Pink Floyd</td>\n",
+       "      <th>294</th>\n",
+       "      <td>95</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Baby Let Me Take You (In My Arms)</td>\n",
+       "      <td>The Detroit Emeralds</td>\n",
        "      <td>x</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>1980-2</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1972-95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1072</th>\n",
-       "      <td>73</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/One_Fine_Day_(song)</td>\n",
-       "      <td>One Fine Day</td>\n",
-       "      <td>Carole King</td>\n",
-       "      <td>One fine day You'll look at me And you will kn...</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>1980-73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4246</th>\n",
-       "      <td>47</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Gangnam_Style</td>\n",
-       "      <td>Gangnam Style</td>\n",
-       "      <td>PSY</td>\n",
-       "      <td>Oppan Gangnam Style Gangnam Style Najeneun dda...</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2012-47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4176</th>\n",
-       "      <td>77</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Cheers_(Drink_to...</td>\n",
-       "      <td>Cheers (Drink to That)</td>\n",
-       "      <td>Rihanna</td>\n",
-       "      <td>x</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2011-77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2989</th>\n",
-       "      <td>90</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Jamboree_(song)</td>\n",
-       "      <td>Jamboree</td>\n",
-       "      <td>Naughty by Nature</td>\n",
-       "      <td>1 Low profile, rap style Slick as new now Give...</td>\n",
+       "      <th>2707</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Return_of_the_Mack</td>\n",
+       "      <td>Return of the Mack</td>\n",
+       "      <td>Mark Morrison</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1990</td>\n",
-       "      <td>1999-90</td>\n",
+       "      <td>1997-8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1541</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/All_I_Need_(Jack...</td>\n",
+       "      <td>All I Need</td>\n",
+       "      <td>Jack Wagner</td>\n",
+       "      <td>Kissing you is not what I had planned And now ...</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1985-42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2231</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Smells_Like_Teen...</td>\n",
+       "      <td>Smells Like Teen Spirit</td>\n",
+       "      <td>Nirvana</td>\n",
+       "      <td>Load up on guns, bring your friends, It's fun ...</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1992-32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2342</th>\n",
+       "      <td>43</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/I%27d_Die_Withou...</td>\n",
+       "      <td>I'd Die Without You</td>\n",
+       "      <td>P.M. Dawn</td>\n",
+       "      <td>x</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1993-43</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      position  year                                         title.href                               title             artist                                             lyrics  decade song_key\n",
-       "1001         2  1980  https://en.wikipedia.org/wiki/Another_Brick_in...  Another Brick in the Wall, Part II         Pink Floyd                                                  x    1980   1980-2\n",
-       "1072        73  1980  https://en.wikipedia.org/wiki/One_Fine_Day_(song)                        One Fine Day        Carole King  One fine day You'll look at me And you will kn...    1980  1980-73\n",
-       "4246        47  2012        https://en.wikipedia.org/wiki/Gangnam_Style                       Gangnam Style                PSY  Oppan Gangnam Style Gangnam Style Najeneun dda...    2010  2012-47\n",
-       "4176        77  2011  https://en.wikipedia.org/wiki/Cheers_(Drink_to...              Cheers (Drink to That)            Rihanna                                                  x    2010  2011-77\n",
-       "2989        90  1999      https://en.wikipedia.org/wiki/Jamboree_(song)                            Jamboree  Naughty by Nature  1 Low profile, rap style Slick as new now Give...    1990  1999-90"
+       "      position  year                                         title.href                              title                artist                                             lyrics  decade song_key\n",
+       "294         95  1972                                                NaN  Baby Let Me Take You (In My Arms)  The Detroit Emeralds                                                  x    1970  1972-95\n",
+       "2707         8  1997   https://en.wikipedia.org/wiki/Return_of_the_Mack                 Return of the Mack         Mark Morrison                                                NaN    1990   1997-8\n",
+       "1541        42  1985  https://en.wikipedia.org/wiki/All_I_Need_(Jack...                         All I Need           Jack Wagner  Kissing you is not what I had planned And now ...    1980  1985-42\n",
+       "2231        32  1992  https://en.wikipedia.org/wiki/Smells_Like_Teen...            Smells Like Teen Spirit               Nirvana  Load up on guns, bring your friends, It's fun ...    1990  1992-32\n",
+       "2342        43  1993  https://en.wikipedia.org/wiki/I%27d_Die_Withou...                I'd Die Without You             P.M. Dawn                                                  x    1990  1993-43"
       ]
      },
      "execution_count": 16,
@@ -859,7 +861,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Sample Lyrics (or Not)"
+    "##Sample Lyrics (or Not)"
    ]
   },
   {
@@ -941,7 +943,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution start --> Thu, 19 Nov 2015 15:58:02\n"
+      "execution start --> Fri, 20 Nov 2015 16:17:16\n"
      ]
     }
    ],
@@ -960,8 +962,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 µs, sys: 2 µs, total: 8 µs\n",
-      "Wall time: 25 µs\n"
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 8.11 µs\n"
      ]
     }
    ],
@@ -1020,7 +1022,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#NLP"
+    "##NLP"
    ]
   },
   {
@@ -1249,7 +1251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution start --> Thu, 19 Nov 2015 15:58:03\n"
+      "execution start --> Fri, 20 Nov 2015 16:17:18\n"
      ]
     }
    ],
@@ -1268,8 +1270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 110 ms, sys: 21.1 ms, total: 131 ms\n",
-      "Wall time: 54.2 s\n"
+      "CPU times: user 126 ms, sys: 13 ms, total: 139 ms\n",
+      "Wall time: 59.6 s\n"
      ]
     }
    ],
@@ -1282,8 +1284,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Vocab\n",
-    "##Nouns"
+    "##Vocab\n",
+    "###Nouns"
    ]
   },
   {
@@ -1606,7 +1608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Adjectives"
+    "###Adjectives"
    ]
   },
   {
@@ -1916,7 +1918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Document Corpus"
+    "##Document Corpus"
    ]
   },
   {
@@ -1991,12 +1993,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Save Spark Conditioning"
+    "##Save Spark Conditioning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -2008,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -2021,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -2034,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -2050,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -2066,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -2080,12 +2082,204 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Split out by decade"
+    "##Synonyms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Synonym Lookups\n",
+    "Focus on WordNet python package within [nltk](http://www.nltk.org) via [textblob](https://textblob.readthedocs.org/en/dev/)\n",
+    "The main idea is to lookup all words in the noun and adj vocab dictionaries and attempt to collapse down -- where possible -- to synonyms. The synonyms can be used for common_support also."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06\n",
+      "-0.341666666667\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TextBlob(\"La amenaza titular de The Blob siempre me ha parecido la película final\n",
+       "monstruo: una, la masa insaciablemente hambriento ameba capaz de penetrar\n",
+       "prácticamente cualquier salvaguardia, capaz de - como médico condenado escalofriantemente\n",
+       "lo describe - \"asimilar carne en contacto.\n",
+       "Comparaciones Snide a la gelatina ser condenados, es un concepto con el más\n",
+       "devastadora de las posibles consecuencias, no muy diferente del escenario plaga gris\n",
+       "propuesto por los teóricos tecnológicos temerosos de\n",
+       "la inteligencia artificial ejecutar rampante.\")"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test of TextBlob\n",
+    "\n",
+    "# from https://textblob.readthedocs.org/en/dev/\n",
+    "from textblob import TextBlob\n",
+    "\n",
+    "text = '''\n",
+    "The titular threat of The Blob has always struck me as the ultimate movie\n",
+    "monster: an insatiably hungry, amoeba-like mass able to penetrate\n",
+    "virtually any safeguard, capable of--as a doomed doctor chillingly\n",
+    "describes it--\"assimilating flesh on contact.\n",
+    "Snide comparisons to gelatin be damned, it's a concept with the most\n",
+    "devastating of potential consequences, not unlike the grey goo scenario\n",
+    "proposed by technological theorists fearful of\n",
+    "artificial intelligence run rampant.\n",
+    "'''\n",
+    "\n",
+    "blob = TextBlob(text)\n",
+    "blob.tags           # [('The', 'DT'), ('titular', 'JJ'),\n",
+    "                    #  ('threat', 'NN'), ('of', 'IN'), ...]\n",
+    "\n",
+    "blob.noun_phrases   # WordList(['titular threat', 'blob',\n",
+    "                    #            'ultimate movie monster',\n",
+    "                    #            'amoeba-like mass', ...])\n",
+    "\n",
+    "for sentence in blob.sentences:\n",
+    "    print(sentence.sentiment.polarity)\n",
+    "# 0.060\n",
+    "# -0.341\n",
+    "\n",
+    "blob.translate(to=\"es\")  # 'La amenaza titular de The Blob...'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "octopus similarity to octopus -->  1.0\n",
+      "octopus similarity to nautilus -->  0.333333333333\n",
+      "octopus similarity to shrimp -->  0.111111111111\n",
+      "octopus similarity to pearl -->  0.0666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test of Synset and path_similarity\n",
+    "\n",
+    "# from http://textblob.readthedocs.org/en/dev/quickstart.html#quickstart\n",
+    "from textblob.wordnet import Synset\n",
+    "octopus = Synset(\"octopus.n.02\")\n",
+    "nautilus = Synset('paper_nautilus.n.01')\n",
+    "shrimp = Synset('shrimp.n.03')\n",
+    "pearl = Synset('pearl.n.01')\n",
+    "\n",
+    "print \"octopus similarity to octopus --> \",octopus.path_similarity(octopus)  # 1.0\n",
+    "print \"octopus similarity to nautilus --> \",octopus.path_similarity(nautilus)  # 0.33\n",
+    "print \"octopus similarity to shrimp --> \",octopus.path_similarity(shrimp)  # 0.11\n",
+    "print \"octopus similarity to pearl --> \",octopus.path_similarity(pearl)  # 0.07"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Vice / Virtue Separation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Ensemble Approach\n",
+    "See [combine all features into a single feature vector](https://databricks.com/blog/2015/07/29/new-features-in-machine-learning-pipelines-in-spark-1-4.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# see https://databricks.com/blog/2015/07/29/new-features-in-machine-learning-pipelines-in-spark-1-4.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Spark Word2Vec for similarity\n",
+    "This approach is plausible but probably should be used in an ensemble vector approach, see [combine all features into a single feature vector](https://databricks.com/blog/2015/07/29/new-features-in-machine-learning-pipelines-in-spark-1-4.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "from pyspark.mllib.feature import Word2Vec #mllib works with RDD as-is\n",
+    "# from pyspark.ml.feature import Word2Vec\n",
+    "\n",
+    "word2vec = Word2Vec()\n",
+    "model = word2vec.fit(nounrdd)\n",
+    "\n",
+    "synonyms = model.findSynonyms('ho', 10)\n",
+    "\n",
+    "for word, cosine_distance in synonyms:\n",
+    "    print(\"{}: {}\".format(word, cosine_distance))\n",
+    "\"\"\"\n",
+    "print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Split out by decade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
