ignoring interim raw lyrics, capturing 1970s processing

--- a/notebooks/mj/Lyrics-Metadata-Processing.ipynb
+++ b/notebooks/mj/Lyrics-Metadata-Processing.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "This notebook will result in a master dataframe exported to [master_lyrics.csv](../../data/conditioned/master_lyrics.csv).\n",
     "\n",
-    "Lyrics harvesting (beyond metadata which is done in this notebook) will be done in [Lyrics-Harvesting Notebook](Lyrics-Harvesting.ipynb) \n",
+    "Lyrics harvesting (beyond metadata which is done in this notebook) will be done in [Lyrics-Raw-Harvesting Notebook](Lyrics-Raw-Harvesting.ipynb) \n",
     "\n",
     "After core pipeline processing to be done in [Vocab-Consolidation Notebook](Vocab-Consolidation.ipynb), the following artifacts will be established, possibly combined for better latent factors processing (not reflected here):\n",
     "* vocabs for noun and adj\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -62,6 +62,7 @@
    "source": [
     "## MLJ: Additional Extras\n",
     "import os\n",
+    "import codecs\n",
     "import requests\n",
     "import time\n",
     "import itertools\n",
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -483,7 +484,7 @@
     "    \"\"\"\n",
     "    path = pathsd[pathsd_key]\n",
     "    \n",
-    "    with open(path, \"w\") as text_file:\n",
+    "    with codecs.open(path,'w',encoding='utf8') as text_file:\n",
     "        text_file.write(str) #auto-closed due to context manager use\n",
     "    \n",
     "    return path\n",
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -785,9 +786,9 @@
       "... song_key: 2001-96, artist: 3 Doors Down, song: Be Like That\n",
       "... using song_key in cache:  2001-96\n",
       "\n",
-      "how many issues were encountered?  0\n",
       "how many new refs were downloaded via API?  0\n",
       "how many results were in the cache?  1\n",
+      "how many issues were encountered?  0\n",
       "{}\n"
      ]
     }
@@ -796,10 +797,9 @@
     "# quick test #1\n",
     "tnew_refs, tcache_refs, t_issues = refsFromLyricsWikia(lyrics_pd_df[lyrics_pd_df.song_key == \"2001-96\"], debug=True)   \n",
     "print\n",
-    "print \"how many issues were encountered? \", len(t_issues)\n",
     "print \"how many new refs were downloaded via API? \", len(tnew_refs)\n",
     "print \"how many results were in the cache? \", len(tcache_refs)\n",
-    "\n",
+    "print \"how many issues were encountered? \", len(t_issues)\n",
     "print tnew_refs"
    ]
   },
@@ -1994,13 +1994,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# close out with lyricsdf\n",
+    "lyricsdf = lyrics_pd_df.copy(deep=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# todo"
+    "def lyricsUrlFor(song_key):\n",
+    "    try:\n",
+    "        path = \"{}{}.json\".format(lw_success_dir,song_key) #normal json\n",
+    "        with open(path) as fp:\n",
+    "            j = json.load(fp)\n",
+    "            return j['lyrics_url'].encode('ascii')\n",
+    "    except Exception:\n",
+    "        return \"\"\n",
+    "    \n",
+    "def lyricsAbstractFor(song_key):    \n",
+    "    try:\n",
+    "        path = \"{}{}.json\".format(lw_success_dir,song_key) #normal json\n",
+    "        with open(path) as fp:\n",
+    "            j = json.load(fp)\n",
+    "            return j['lyrics_abstract'].encode('ascii')\n",
+    "    except Exception:\n",
+    "        return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Apply lyrics url where available\n",
+    "lyricsdf['lyrics_url'] = lyricsdf.song_key.apply(lambda x : lyricsUrlFor(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Apply lyrics abstract where available\n",
+    "lyricsdf['lyrics_abstract'] = lyricsdf.song_key.apply(lambda x : lyricsAbstractFor(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>position</th>\n",
+       "      <th>year</th>\n",
+       "      <th>title.href</th>\n",
+       "      <th>title</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>lyrics</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>song_key</th>\n",
+       "      <th>lyrics_url</th>\n",
+       "      <th>lyrics_abstract</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Bridge_over_Trou...</td>\n",
+       "      <td>Bridge over Troubled Water</td>\n",
+       "      <td>Simon and Garfunkel</td>\n",
+       "      <td>When you're weary feeling small When tears are...</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1970-1</td>\n",
+       "      <td>http://lyrics.wikia.com/Simon_And_Garfunkel:Br...</td>\n",
+       "      <td>When you're weary\\nFeeling small\\nWhen tears a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/(They_Long_to_Be...</td>\n",
+       "      <td>(They Long to Be) Close to You</td>\n",
+       "      <td>The Carpenters</td>\n",
+       "      <td>x</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1970-2</td>\n",
+       "      <td>http://lyrics.wikia.com/Carpenters:%28They_Lon...</td>\n",
+       "      <td>Why do birds suddenly appear\\nEverytime you ar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/American_Woman_(...</td>\n",
+       "      <td>American Woman</td>\n",
+       "      <td>The Guess Who</td>\n",
+       "      <td>American woman, stay away from me American wom...</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1970-3</td>\n",
+       "      <td>http://lyrics.wikia.com/The_Guess_Who:American...</td>\n",
+       "      <td>Mmm, da da da\\nMmm, mmm, da da da\\nMmm, mmm, d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Raindrops_Keep_F...</td>\n",
+       "      <td>Raindrops Keep Fallin' on My Head</td>\n",
+       "      <td>B.J. Thomas</td>\n",
+       "      <td>Raindrops keep falling on my head Just like th...</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1970-4</td>\n",
+       "      <td>http://lyrics.wikia.com/B.J._Thomas:Raindrops_...</td>\n",
+       "      <td>Raindrops are falling on my head\\nAnd just lik...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/War_(Edwin_Starr...</td>\n",
+       "      <td>War</td>\n",
+       "      <td>Edwin Starr</td>\n",
+       "      <td>War huh Yeah! Absolutely uh-huh, uh-huh huh Ye...</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1970-5</td>\n",
+       "      <td>http://lyrics.wikia.com/Edwin_Starr:War</td>\n",
+       "      <td>War, huh, yeah\\nWhat is it good for?\\nAbsolute...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   position  year                                         title.href                              title               artist                                             lyrics  decade song_key                                         lyrics_url                                    lyrics_abstract\n",
+       "0         1  1970  https://en.wikipedia.org/wiki/Bridge_over_Trou...         Bridge over Troubled Water  Simon and Garfunkel  When you're weary feeling small When tears are...    1970   1970-1  http://lyrics.wikia.com/Simon_And_Garfunkel:Br...  When you're weary\\nFeeling small\\nWhen tears a...\n",
+       "1         2  1970  https://en.wikipedia.org/wiki/(They_Long_to_Be...     (They Long to Be) Close to You       The Carpenters                                                  x    1970   1970-2  http://lyrics.wikia.com/Carpenters:%28They_Lon...  Why do birds suddenly appear\\nEverytime you ar...\n",
+       "2         3  1970  https://en.wikipedia.org/wiki/American_Woman_(...                     American Woman        The Guess Who  American woman, stay away from me American wom...    1970   1970-3  http://lyrics.wikia.com/The_Guess_Who:American...  Mmm, da da da\\nMmm, mmm, da da da\\nMmm, mmm, d...\n",
+       "3         4  1970  https://en.wikipedia.org/wiki/Raindrops_Keep_F...  Raindrops Keep Fallin' on My Head          B.J. Thomas  Raindrops keep falling on my head Just like th...    1970   1970-4  http://lyrics.wikia.com/B.J._Thomas:Raindrops_...  Raindrops are falling on my head\\nAnd just lik...\n",
+       "4         5  1970  https://en.wikipedia.org/wiki/War_(Edwin_Starr...                                War          Edwin Starr  War huh Yeah! Absolutely uh-huh, uh-huh huh Ye...    1970   1970-5            http://lyrics.wikia.com/Edwin_Starr:War  War, huh, yeah\\nWhat is it good for?\\nAbsolute..."
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lyricsdf.head()"
    ]
   },
   {
@@ -2012,14 +2179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# save lyricsdf\n",
-    "# lyricsdf.to_csv(\"../../data/conditioned/master-lyricsdf.csv\",index=False)"
+    "lyrics_pd_df.to_csv(\"../../data/conditioned/pre-lyricsdf.csv\",index=False) #encoding='utf-8' doesn't work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# save lyricsdf\n",
+    "lyricsdf.to_csv(\"../../data/conditioned/master-lyricsdf.csv\",index=False) #encoding='utf-8' doesn't work"
    ]
   }
  ],
