initial documentation update after finalizing master lyrics df

--- a/notebooks/mj/Lyrics-Metadata-Processing.ipynb
+++ b/notebooks/mj/Lyrics-Metadata-Processing.ipynb
@@ -10,10 +10,10 @@
     "1. pipeline process will leverage api from lyrics.wikia for song lyrics both abstracts (suitable for partial display to users) and full (suitable for processing needs)\n",
     "    1. URL e.g. [Paul Simon's \"Bridge Over Troubled Water](http://lyrics.wikia.com/wiki/Paul_Simon:Bridge_Over_Troubled_Water)\n",
     "    1. API Metadata e.g. [Joe Bonamassa's \"So Many Roads\"](http://lyrics.wikia.com/api.php?action=lyrics&artist=Joe%20Bonamassa&song=So%20Many%20Roads&fmt=json)  \n",
-    "1. maintain the following from initial [parsed lyrics metadata for 1970-2014](../../data/provided/all%20billboard%20top%20100%20songs%20from%201970-2014.csv) (which was provided): `postion`, `year`, `title`, `artist`, `title.href` (wikipedia)\n",
+    "1. maintain the following from initial [lyrics from 1970 - 2014](../../data/provided/all%20billboard%20top%20100%20songs%20from%201970-2014.csv) (which was provided): `postion`, `year`, `title`, `artist`, `title.href` (wikipedia)\n",
     "1. maintain the derived columns `decade` and `song_key`\n",
     "\n",
-    "This notebook will result in a master dataframe exported to [master_lyricsdf.csv](../../data/conditioned/master_lyricsdf.csv).\n",
+    "This notebook will result in a master dataframe exported to [master-lyricsdf.csv](../../data/conditioned/master-lyricsdf.csv).\n",
     "\n",
     "Lyrics harvesting (beyond metadata which is done in this notebook) will be done in [Lyrics-Raw-Harvesting Notebook](Lyrics-Raw-Harvesting.ipynb), followed by [Lyrics-Extraction Notebook](Lyrics-Extraction.ipynb) for generating and integrating the final lyric corpus.\n",
     "\n",
